--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,17 @@
 @import "tailwindcss";
 
+@theme {
+  --color-green: #87b862;
+  --color-green-dark: #377706;
+  --color-black: #1c122c;
+  --color-accent: #d3ddcb;
+
+  --breakpoint-sm: 520px;
+  --breakpoint-md: 650px;
+}
+
 :root {
-  /* colors
-    #8cb46d
-    #1c122c
-    #d3ddcb
-   */
-  --bg-color: #8cb46d;
-  --fg-color: #1c122c;
-  --accent-color: #d3ddcb;
+  --test: #d3ddcb;
   --minWidth: 480px;
   font-family: Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -24,8 +27,7 @@
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http%3A//www.w3.org/2000/svg' width='40' height='40' fill='none' viewBox='0 0 40 40' stroke-width='1' stroke='%231c122c'%3E%3Ccircle cx='20' cy='20' r='3' /%3E%3C/svg%3E");
   background-position: 0 0;
   animation: bg-move-40 3s linear infinite;
-  background-color: var(--bg-color);
-  color: var(--fg-color);
+  @apply bg-green text-black;
 
   touch-action: none;
 }
@@ -67,13 +69,7 @@ body {
   /* @apply fixed; */
 }
 
-
-#canvas {
-  @apply absolute w-full h-full left-0 top-0;
-  @apply pointer-events-none;
-  min-width: var(--minWidth);
-  touch-action: none;
-}
+/* Menu */
 
 #menu {
   width: 100%;
@@ -89,8 +85,7 @@ body {
 }
 
 .menu-header {
-  font-size: 28px;
-  font-weight: bold;
+  @apply text-5xl font-bold;
 }
 
 .menu-options {
@@ -102,16 +97,36 @@ body {
 }
 
 .menu-btn {
-  padding: 0.5rem;
-  background-color: #8cb46d;
-  width: 10rem;
-  border-radius: 5px;
+  @apply px-4 py-3 rounded-xl w-44 border-4 font-semibold;
+  @apply text-xl hover:scale-105 transition;
   cursor: pointer;
 }
 
-.menu-btn:hover {
-  transform: scale(1.02);
-  transition: transform .3s cubic-bezier(.5, .5, 1, 10);
+#levels {
+  width: 100%;
+  max-width: 720px;
+  aspect-ratio: 3 / 4;
+  margin-inline: auto;
+  background-color: #aee0bfaa;
+
+  @apply p-4;
+  @apply grid grid-cols-5 gap-4;
+  @apply items-start content-start;
+}
+
+.level-btn {
+  @apply rounded-full text-3xl border-4;
+  @apply aspect-square cursor-pointer;
+  @apply hover:scale-105 transition;
+}
+
+/* Game */
+
+#canvas {
+  @apply absolute w-full h-full left-0 top-0;
+  @apply pointer-events-none;
+  min-width: var(--minWidth);
+  touch-action: none;
 }
 
 #game-stage {
@@ -124,7 +139,7 @@ body {
   place-items: center;
   overflow: hidden;
   contain: paint;
-  background-color: #999999aa
+  background-color: #cecaca49
 }
 
 .wordLoop {
@@ -152,12 +167,11 @@ body {
   /* background-color: hsl(93, 71%, 83%); */
   color: hsl(0, 0%, 40%);
   transform: scale(1.02);
-  transition: transform .3s cubic-bezier(.5, .5, 1, 10);
+  transition: transform .1s cubic-bezier(.5, .5, 1, 10);
 }
 
 .letter-circle {
-  background-color: var(--accent-color);
-  @apply size-14 text-2xl select-none font-semibold;
+  @apply bg-accent size-14 text-2xl select-none font-semibold;
   @apply rounded-full;
   @apply grid place-items-center;
   @apply transition duration-100;
@@ -165,18 +179,36 @@ body {
 
 #hangman {
   @apply absolute top-0 p-[2%] space-y-6 w-full;
+  transition: opacity 500ms 500ms;
+}
+
+#hangman.correct {
+  /* @apply transition-opacity duration-200; */
+  /* @apply opacity-0; */
+  opacity: 0;
+}
+
+#hangman.correct .hangman-seg {
+  scale: 1.03;
+  transition: scale 400ms cubic-bezier(.5, .5, 1, 10);
+  transform: none;
 }
 
 .hangman-word {
   display: flex;
   gap: 2%;
+  @apply justify-center;
 }
 
 .hangman-seg {
-  flex: 1;
-  /* @apply size-16; */
-  @apply grid place-items-center;
-  @apply bg-(--accent-color);
+  @apply flex-none w-12 sm:w-14 md:w-16;
+  @apply grid place-items-center rounded-full;
+  @apply bg-accent font-bold;
   @apply text-2xl sm:text-3xl md:text-4xl;
-  @apply border-2 aspect-square;
+  @apply aspect-square;
+}
+
+.hangman-seg.used {
+  transform: scale(1.02);
+  transition: transform .1s cubic-bezier(.5, .5, 1, 10);
 }
