--- a/src/style.css
+++ b/src/style.css
@@ -233,6 +233,15 @@ body {
   @apply transition bg-accent/40 hover:bg-accent;
 }
 
+#settings {
+  background-color: #aec4e0aa;
+
+  @apply p-4;
+  @apply grid gap-4;
+  @apply place-items-center content-center;
+}
+
+
 
 /* Game */
 
@@ -269,6 +278,8 @@ body {
   @apply transition bg-accent/40 hover:bg-accent;
   @apply bg-linear-to-r to-accent/40 to-50%;
   @apply from-49% from-green-dark/40;
+  display: none;
+
   background-size: 200%;
   background-position: 100%;
 }
