--- a/src/style.css
+++ b/src/style.css
@@ -100,17 +100,21 @@ body {
 }
 
 #menu-header {
-  @apply size-120 mx-auto relative grid place-items-center pointer-events-none;
+  @apply size-100 md:size-120 mx-auto relative grid place-items-center pointer-events-none;
+  overflow: hidden;
+  contain: paint;
 }
 
 .title-loop {
-  @apply absolute size-120 overflow-hidden;
+  @apply absolute size-100 md:size-120 overflow-hidden;
   rotate: 25deg;
+  transform: rotate(-107deg);
   animation: title-wobble1 8s infinite;
 }
 
 .title-inner-loop {
-  @apply size-80;
+  @apply size-64 md:size-80;
+  transform: rotate(-120deg);
   animation: title-wobble2 3.4s infinite;
 }
 
