--- a/src/style.css
+++ b/src/style.css
@@ -69,14 +69,21 @@
 
 html {
   height: var(--fullHeight, 100vh);
-  min-width: var(--minWidth);
+  min-width: 0;
 }
 
 body {
-  min-width: var(--minWidth);
+  min-width: 0;
   height: var(--fullHeight, 100vh);
   overflow-x: hidden;
   @apply w-full flex items-center;
+}
+#app-wrap {
+  min-width: var(--minWidth);
+  transform-origin: left top;
+  height: var(--fullHeight, 100vh);
+  @apply w-full flex items-center mx-auto;
+  overflow-x: hidden; 
 }
 
 .stage {
@@ -253,11 +260,10 @@ body {
   @apply fixed w-full left-0 top-0;
   @apply pointer-events-none;
   height: var(--fullHeight, 100vh);
-  min-width: var(--minWidth);
+  /* min-width: var(--minWidth); */
   touch-action: none;
   /* filter: hue-rotate(0deg) brightness(1) invert(0); */
   filter: saturate(100%) hue-rotate(0deg);
-
 }
 
 #canvas.correct {
